qbittorrent/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`qbittorrent.k3s.com`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: https
